# diffalg

./: .gitignore  DiffAlg.m2  README.md  diffAlg.tex  pyproject.toml
diff_alg/: __init__.py  core.py
docs/: index.md
tests/: test_diffalg.py
