[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "diffalg"
version = "0.1.0"
description = "SageMath port of the DiffAlg Macaulay2 package for differential algebra"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/DiffAlg/diffalg"
